[package]
name = "gcp_auth"
version = "0.3.2"
authors = ["Peter Hrvola <peter.hrvola@gmail.com>"]
repository = "https://github.com/hrvolapeter/gcp_auth"
description = "Google cloud platform (GCP) authentication using default and custom service accounts"
documentation = "https://docs.rs/gcp_auth/"
keywords = ["authentication", "gcp", "google"]
categories = ["asynchronous", "authentication"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
rustls = "0.18.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "2"
async-std = "1.8.0"
async-trait = "0.1.42"
thiserror = "1.0"
dirs-next = "2.0"
surf = "2.1.0"
